@@ -7,6 +7,7 @@ Changelog
  * View live / draft links in the admin now consistently open in a new window (Marco Fucci)
  * `ChoiceBlock` now omits the blank option if the block is required and has a default value (Andreas Nüßlein)
  * Fix: Help text for StreamField is now visible and does not cover block controls (Stein Strindhaug)
+ * Fix: "X minutes ago" timestamps are now marked for translation (Janneke Janssen, Matt Westcott)
 
 
 1.8 (15.12.2016)
